--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,14 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/farmacia
+spring.datasource.url=jdbc:mysql://localhost:3306/farmacia_spring
+
 spring.datasource.username=root
 spring.datasource.password=root
+
+spring.datasource.testWhileIdle=true
+spring.datasource.validationQuery=SELECT 1
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.naming-strategy=org.hibernate.cfg.ImprovedNamingStrategy
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
