Desafio - variável de ambiente + Ajuste de relacionamento para criação de produto

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/farmacia_spring
+spring.datasource.url=jdbc:mysql://${DB_HOST}/${DB_NAME}
 
-spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.username=${DB_USER}
+spring.datasource.password=${DB_PASSWORD}
 
 spring.datasource.testWhileIdle=true
 spring.datasource.validationQuery=SELECT 1
